--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "fetch-intercept": "^2.4.0",
+    "javascript-time-ago": "^2.5.9",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.73.4",
