[#FIXES] - fixes styles - fixes all features - tess

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,9 +75,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.kissing"
+    namespace "com.kissing_"
     defaultConfig {
-        applicationId "com.kissing"
+        applicationId "com.kissing_"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
